fix overflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,7 +11,6 @@
 body {
   background: $Color-Fondo center fixed;
   height: 100%;
-  overflow: -moz-scrollbars-none;
 }
 a,
 ul {
